--- a/drush.services.yml
+++ b/drush.services.yml
@@ -1,5 +1,5 @@
 services:
   entity_change_tracking.commands:
-    class: Drupal\haenchen\entity_change_tracking\Commands\EntityChangeTrackingCommands
+    class: Drupal\entity_change_tracking\Commands\EntityChangeTrackingCommands
     tags:
       - { name: drush.command }
