--- a/entity_change_tracking.routing.yml
+++ b/entity_change_tracking.routing.yml
@@ -1,7 +1,7 @@
 entity_change_tracking.config_form:
   path: /admin/config/entity_change_tracking/config
   defaults:
-    _form: \haenchen\entity_change_tracking\Form\DataChangeTrackingConfigForm
+    _form: Drupal\entity_change_tracking\Form\EntityChangeTrackingConfigForm
     _title: 'Entity Change Tracking'
   requirements:
     _permission: 'access administration pages'
